# superharness

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TASKS.md  coverage.json  deny.toml  environment.yml  pyproject.toml  ruff.toml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/agent/: client.rs  mod.rs
cli/src/cli/: app.rs  args.rs  mod.rs
cli/src/commands/: config.rs  mod.rs  run.rs  session.rs  tool_exec.rs  tools.rs
cli/src/config/: loader.rs  mod.rs
cli/src/git/: branch.rs  commands.rs  commit.rs  diff.rs  mod.rs  pr.rs  status.rs
cli/src/integration/: audit.rs  mcp.rs  mod.rs
cli/src/output/: format.rs  loader.rs  mod.rs  streaming.rs  terminal_colors.rs
cli/src/tui/: app.rs  event.rs  first_run.rs  mod.rs  session_persistence.rs  slash_commands.rs  tutorial.rs  ui.rs
cli/src/tui/components/: chat.rs  code_editor.rs  code_viewer.rs  color_theme.rs  confirmation.rs  error_display.rs  input.rs  key_hints.rs  markdown_renderer.rs  mod.rs  permission_popup.rs  session_list.rs  status.rs  syntax_highlight.rs  token_stats.rs  tool_display.rs
cli/tests/: integration_llm.rs
cli/tests/common/: mod.rs  test_config.rs
docs/: API_DESIGN_DRAFT.md  ARCHITECTURE_EXPLAINED.md  ARCHITECTURE_V4.md  AUDIT_REPORT.md  CLI_TUI_IMPROVEMENT_PLAN.md  COMPETITIVE_ANALYSIS.md  COST_CONTROL_DESIGN.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_ROADMAP.md  DEV_PLAN.md  DIFFERENTIATION_STRATEGY.md  EXPERT_REVIEW_ROUND14_CONSENSUS.md  FRAMEWORK_RESEARCH_SUMMARY.md  HOW_TO_BE_TRULY_USEFUL.md  IMPROVEMENT_PLAN.md  INNOVATION_DEEP_REVIEW.md  INNOVATION_HONEST_REVIEW.md  LAYER4_5_ASSIGNMENT.md  ROADMAP.md  (+50 more)
python/: README.md  pyproject.toml
python/benchmarks/: bench_agent.py  bench_config.py  bench_session.py
python/continuum/: __init__.py
python/continuum_sdk/: __init__.py
python/continuum_sdk/agent/: __init__.py  checkpoint.py  intelligent.py  planner.py  progress.py  runtime.py  self_correction.py  session.py  task_completion.py
python/continuum_sdk/config/: __init__.py  config.example.toml  loader.py  providers.py
python/continuum_sdk/examples/: README.md  __init__.py
python/continuum_sdk/examples/advanced/: custom_tools.py  workflow.py
python/continuum_sdk/examples/basic/: hello_agent.py  hello_world.py  session_example.py
python/continuum_sdk/llm/: __init__.py  client.py  errors.py  streaming.py  types.py
python/continuum_sdk/memory/: __init__.py  layers.py  storage.py
python/continuum_sdk/rag/: __init__.py  retriever.py  vectorstore.py
python/continuum_sdk/tools/: __init__.py  bash.py  builtin.py  custom.py  file_ops.py  search.py  types.py
python/continuum_sdk/workflow/: __init__.py  dag.py
python/superharness/: __init__.py
python/superharness_sdk/: __init__.py
python/superharness_sdk/agent/: __init__.py  runtime.py  session.py
python/superharness_sdk/config/: __init__.py  loader.py  providers.py
python/superharness_sdk/examples/: README.md  __init__.py
python/superharness_sdk/examples/advanced/: custom_tools.py  workflow.py
python/superharness_sdk/examples/basic/: __init__.py  hello_agent.py  hello_world.py  session_example.py
python/superharness_sdk/llm/: __init__.py  client.py
python/superharness_sdk/memory/: __init__.py  layers.py
python/superharness_sdk/tools/: __init__.py  builtin.py  custom.py
python/superharness_sdk/workflow/: __init__.py  dag.py
python/tests/: test_agent.py  test_binding_integration.py  test_builtin.py  test_builtin_coverage.py  test_config.py  test_config_loader_coverage.py  test_dag.py  test_intelligent_agent.py  test_llm_client.py  test_llm_integration.py  test_llm_real.py  test_memory.py  test_memory_storage.py  test_retriever_coverage.py  test_session.py  test_streaming.py  test_task_completion.py  test_tools.py  test_tools_real.py  test_vectorstore.py
rust/continuum-placeholder/: Cargo.toml  lib.rs
rust/layer0/: Cargo.toml  README.md
rust/layer0/src/: access_controller.rs  input_validator.rs  lib.rs  pii_scrubber.rs  rate_limiter.rs  secrets_manager.rs
rust/layer1/: Cargo.toml  README.md
rust/layer1/benches/: bench_concurrent.rs  bench_config.rs  bench_session.rs
rust/layer1/src/: cache_manager.rs  config_manager.rs  cost_tracker.rs  embeddings.rs  error_handler.rs  event_bus.rs  lib.rs  llm_client.rs  observability.rs  storage_engine.rs  streaming.rs
rust/layer2/: Cargo.toml  README.md
rust/layer2/src/: agent_runtime.rs  hook_system.rs  lib.rs  prompts.rs  tasks.rs  tool_registry.rs  types.rs
rust/layer2/src/checkpoint_system/: atomic.rs  checksum.rs  mod.rs  recovery.rs  retry.rs  writer.rs
rust/layer2/src/session_manager/: context.rs  lock.rs  manager.rs  mod.rs  session.rs
rust/layer2/src/workflow_engine/: dag.rs  executor.rs  mod.rs  node.rs
rust/layer3/: Cargo.toml  README.md
rust/layer3/src/: example_selectors.rs  guard_rails.rs  lib.rs  lsp_client.rs  output_parsers.rs  process_manager.rs  query_engine.rs  retriever_engine.rs  sandbox_runtime.rs  skills.rs  text_splitters.rs  types.rs  vector_store.rs
rust/layer3/src/builtin_tools/: adapter.rs  code.rs  file_ops.rs  memory_tools.rs  mod.rs  network.rs  search.rs  shell.rs  workflow_tools.rs
rust/layer3/src/document_loaders/: csv.rs  json.rs  markdown.rs  mod.rs  pdf.rs  text.rs
rust/layer3/src/memory_system/: long_term.rs  mod.rs  project.rs  session.rs  system.rs  working.rs
rust/layer3/src/tool_executor/: executor.rs  mod.rs
rust/layer4/: Cargo.toml  README.md
rust/layer4/src/: lib.rs  types.rs
rust/layer4/src/audit_logger/: entry.rs  logger.rs  mod.rs  storage.rs
rust/layer4/src/channel_gateway/: mod.rs
rust/layer4/src/channel_gateway/adapter/: cli.rs  http.rs  mod.rs  websocket.rs
rust/layer4/src/mcp_bridge/: bridge.rs  client.rs  handler.rs  mod.rs  protocol.rs  transport.rs
rust/layer4/src/plugin_loader/: mod.rs
rust/layer4/src/worktree_manager/: mod.rs
rust/sh-core/: Cargo.toml  README.md
rust/sh-core/src/: lib.rs
rust/sh-python/: Cargo.toml  README.md
rust/sh-python/src/: lib.rs
(+129 files in other folders)
