[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "continuum-agent-sdk"
version = "1.0.0"
description = "Production-Grade Agent Framework with Crash Safety Guarantees"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Continuum Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
continuum = "continuum.cli:main"

[project.urls]
Homepage = "https://github.com/EnjouZeratul/continuum"
Repository = "https://github.com/EnjouZeratul/continuum"
Documentation = "https://github.com/EnjouZeratul/continuum#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "continuum_sdk._continuum"
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["python/continuum_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
