[package]
name = "superharness-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SuperHarness CLI - Terminal Agent Product"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/superharness-cli"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "superharness"
path = "src/main.rs"

[dependencies]
sh-core = { path = "../rust/sh-core" }
sh-layer1 = { path = "../rust/layer1" }
sh-layer4 = { path = "../rust/layer4" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

# CLI 相关
clap = { version = "4.5", features = ["derive", "color"] }
ratatui = "0.28"  # TUI 框架
crossterm = "0.28"  # 终端控制
whoami = "1.5"  # 用户名获取

[dev-dependencies]
tempfile.workspace = true