[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superharness"
version = "1.0.0"
description = "Production-Grade Agent Framework with Crash Safety Guarantees"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SuperHarness Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/superharness/superharness"
Documentation = "https://superharness.readthedocs.io"
Repository = "https://github.com/superharness/superharness"
Issues = "https://github.com/superharness/superharness/issues"

[tool.hatch.build.targets.wheel]
packages = ["superharness", "superharness_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/superharness",
    "/superharness_sdk",
    "/tests",
    "/benchmarks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["superharness", "superharness_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
