[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuum-agent-sdk"
version = "1.0.0"
description = "Production-Grade Agent Framework with Crash Safety Guarantees"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Continuum Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/EnjouZeratul/continuum"
Documentation = "https://github.com/EnjouZeratul/continuum#readme"
Repository = "https://github.com/EnjouZeratul/continuum"
Issues = "https://github.com/EnjouZeratul/continuum/issues"

[tool.hatch.build.targets.wheel]
packages = ["continuum", "continuum_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/continuum",
    "/continuum_sdk",
    "/tests",
    "/benchmarks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["continuum", "continuum_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = [
    "B904",  # raise from err - good practice but not critical
    "E402",  # module import not at top - intentional in tests for sys.path
    "B017",  # blind exception assertion - acceptable in tests
    "E501",  # line too long - existing code style
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "B017", "E501"]
