[package]
name = "continuum"
version = "1.0.0"
edition = "2021"
authors = ["Continuum Team"]
license = "MIT"
description = "Production-Grade Agent Framework with Crash Safety Guarantees"
repository = "https://github.com/EnjouZeratul/continuum"
homepage = "https://github.com/EnjouZeratul/continuum"
documentation = "https://docs.rs/continuum"
keywords = ["agent", "llm", "ai", "runtime", "terminal"]
categories = ["development-tools", "api-bindings", "command-line-utilities"]

[lib]
name = "continuum"
path = "lib.rs"

[workspace]