[package]
name = "sh-layer1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SuperHarness Layer 1: Foundation"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sh-layer1"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sh-layer0.workspace = true

tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
sled.workspace = true
config.workspace = true
moka.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
futures.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
dashmap.workspace = true

[[bench]]
name = "bench_config"
harness = false

[[bench]]
name = "bench_session"
harness = false

[[bench]]
name = "bench_concurrent"
harness = false