[package]
name = "sh-layer2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SuperHarness Layer 2: Core Engine"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sh-layer2"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sh-layer0.workspace = true
sh-layer1.workspace = true

tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
sha2.workspace = true
glob.workspace = true
regex.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true