[package]
name = "sh-layer3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Continuum Layer 3: Capabilities"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sh-layer3"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sh-layer0.workspace = true
sh-layer1.workspace = true
sh-layer2.workspace = true

tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
regex.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true