[package]
name = "sh-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Continuum Python Bindings"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sh-python"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
sh-core = { path = "../sh-core" }
sh-layer0 = { path = "../layer0" }
sh-layer1 = { path = "../layer1" }
sh-layer2 = { path = "../layer2" }
sh-layer3 = { path = "../layer3" }
sh-layer4 = { path = "../layer4" }

pyo3.workspace = true
pyo3-async-runtimes.workspace = true

tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lib]
name = "sh_python"
crate-type = ["cdylib"]
